--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "heroku-prebuild": "cd public && npm install"
   },
   "dependencies": {
+    "angular": "^1.5.7",
+    "angular-route": "^1.5.7",
     "body-parser": "~1.4.3",
     "change-case": "^2.3.1",
     "connect-mongo": "^1.1.0",
